fixed spacing

--- a/JS-Projects/analog-clock/styles.css
+++ b/JS-Projects/analog-clock/styles.css
@@ -100,7 +100,7 @@ body {
 
 .message {
   position: absolute;
-  bottom: 4rem;
+  bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
   font-size: 2.4rem;
